scrollbar fix

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -32,7 +32,7 @@ body {
     transition: opacity 150ms ease-in;
     opacity: 0;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-color: rgba(255,255,255,0.4) rgba(0,0,0,0.2);
     scrollbar-width: thin;
 }
